--- a/AspnetIdentityRoleBasedTutorial/Views/Shared/_Layout.cshtml
+++ b/AspnetIdentityRoleBasedTutorial/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
 
     @* Common header for all Pages*@
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light" style="background-color: #0084d6;">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light" style="background-color: darkviolet;">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><h3>DB Cart</h3></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
