--- a/AspnetIdentityRoleBasedTutorial/Views/Shared/_Layout.cshtml
+++ b/AspnetIdentityRoleBasedTutorial/Views/Shared/_Layout.cshtml
@@ -206,6 +206,11 @@
 </html>
 
 <style>
+    body{
+        margin: 0;
+        overflow-x: hidden;
+        font-family: 'fantasy';
+    }
     .navbar-light .navbar-brand {
         color: #e9ecef;
     }
