--- a/AspnetIdentityRoleBasedTutorial/Views/Shared/_LoginPartial.cshtml
+++ b/AspnetIdentityRoleBasedTutorial/Views/Shared/_LoginPartial.cshtml
@@ -15,7 +15,7 @@
             </form>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-white" asp-area="Identity" asp-page="/Account/Login"><i class="fa fa-shopping-cart" style="font-size:24px">Cart</i></a>
+            <a class="nav-link text-white" asp-area="" asp-controller="Cart" asp-action="CartList"><i class="fa fa-shopping-cart" style="font-size:24px">Cart</i></a>
         </li>
     }
     else
@@ -27,7 +27,7 @@
             <a class="nav-link text-white" asp-area="Identity" asp-page="/Account/Login"><i class="fa fa-user" style="font-size:24px"></i>Login</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-white" asp-area="Identity" asp-page="/Account/Login"><i class="fa fa-shopping-cart" style="font-size:24px">Cart</i></a>
+            <a class="nav-link text-white" asp-area="" asp-controller="Cart" asp-action="CartList"><i class="fa fa-shopping-cart" style="font-size:24px">Cart</i></a>
         </li>     
     }
 </ul>
