--- a/AspnetIdentityRoleBasedTutorial/Views/Shared/_Layout.cshtml
+++ b/AspnetIdentityRoleBasedTutorial/Views/Shared/_Layout.cshtml
@@ -189,12 +189,14 @@
     </div>
 
     @* Common footer for all Pages*@
+    <div style="margin-top:45%">
+        <footer class="border-top footer text-muted" style="background-color: rebeccapurple;">
+            <div class="container" style="color:#ffffff;">
+                &copy; 2023 - DB Cart Pvt Ltd. - <a asp-area="" asp-controller="Home" asp-action="Privacy">About Us</a>
+            </div>
+        </footer>
+    </div>
 
-    <footer class="border-top footer text-muted" style="background-color: rebeccapurple;">
-        <div class="container" style="color:#ffffff;">
-            &copy; 2023 - DB Cart Pvt Ltd. - <a asp-area="" asp-controller="Home" asp-action="Privacy">About Us</a>
-        </div>
-    </footer>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
