--- a/AspnetIdentityRoleBasedTutorial/Views/Product/ProductDetails.cshtml
+++ b/AspnetIdentityRoleBasedTutorial/Views/Product/ProductDetails.cshtml
@@ -47,6 +47,70 @@
             }
         </section>
     </div>
+
+        <div>
+        <div class="section4-header">
+            <span class="title">OFFER ZONE</span>
+            <button class="next" onclick='scrollright5()'><i class="fa fa-angle-right"></i></button>
+            <button class="previous" onclick='scrollleft5()'><i class="fa fa-angle-left"></i></button>
+        </div>
+        <hr />
+
+        <section class="section4" id="section5">
+            @foreach (var product in Model.TblProducts)
+            {
+                <div class="product-item">
+                    <div class="slider">
+                        <a href="#" class="like-button" id="heart" onclick="mainMenuNav('@Url.Action("AddWishList", "WishList",new {ProductId=product.ProductId})')"><i class="far fa-heart"></i></a>
+                        <img src="~/Img/@product.Image" width="200" height="150" />
+                        <span>@product.ProductName</span>
+                        <span>@product.Rate</span>
+                        <div class="quantity-container">
+                            <button class="quantity-button minus" onclick="decrementQuantity(this)">-</button>
+                            <input type="number" class="quantity-input" name="quantity" value="1" min="1" max="100">
+                            <button class="quantity-button plus" onclick="incrementQuantity(this)">+</button>
+                        </div>
+                        <div class="button-container">
+                            <button type="button" class="btn btn-info" onclick="BuyNow('@Url.Action("GetAddressId", "Address",new {userId=product.CreatedBy,Id=product.ProductId})')">Buy</button>
+                            <button type="button" class="btn btn-dark" onclick="addToCart('@Url.Action("InsertToCart", "Product",new {Id=product.ProductId,quantity = "TO_Num"})',this)">Add to Cart</button>
+                        </div>
+                    </div>
+                </div>
+            }
+        </section>
+    </div>
+
+    <div>
+        <div class="section4-header">
+            <span class="title">NEW COMES</span>
+            <button class="next" onclick='scrollright6()'><i class="fa fa-angle-right"></i></button>
+            <button class="previous" onclick='scrollleft6()'><i class="fa fa-angle-left"></i></button>
+        </div>
+        <hr />
+
+        <section class="section4" id="section6">
+            @foreach (var product in Model.TblProducts)
+            {
+                <div class="product-item">
+                    <div class="slider">
+                        <a href="#" class="like-button" id="heart" onclick="mainMenuNav('@Url.Action("AddWishList", "WishList",new {ProductId=product.ProductId})')"><i class="far fa-heart"></i></a>
+                        <img src="~/Img/@product.Image" width="200" height="150" />
+                        <span>@product.ProductName</span>
+                        <span>@product.Rate</span>
+                        <div class="quantity-container">
+                            <button class="quantity-button minus" onclick="decrementQuantity(this)">-</button>
+                            <input type="number" class="quantity-input" name="quantity" value="1" min="1" max="100">
+                            <button class="quantity-button plus" onclick="incrementQuantity(this)">+</button>
+                        </div>
+                        <div class="button-container">
+                            <button type="button" class="btn btn-info" onclick="BuyNow('@Url.Action("GetAddressId", "Address",new {userId=product.CreatedBy,Id=product.ProductId})')">Buy</button>
+                            <button type="button" class="btn btn-dark" onclick="addToCart('@Url.Action("InsertToCart", "Product",new {Id=product.ProductId,quantity = "TO_Num"})',this)">Add to Cart</button>
+                        </div>
+                    </div>
+                </div>
+            }
+        </section>
+    </div>
 </body>
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -57,6 +121,24 @@
 <script>
     $(document).ready(function () {
         $('.section4').slick({
+            slidesToShow: 1,
+            slidesToScroll: 1,
+            autoplay: true,
+            autoplaySpeed: 100 // Adjust the speed as needed
+        });
+    });
+
+        $(document).ready(function () {
+        $('.section5').slick({
+            slidesToShow: 1,
+            slidesToScroll: 1,
+            autoplay: true,
+            autoplaySpeed: 100 // Adjust the speed as needed
+        });
+    });
+
+    $(document).ready(function () {
+        $('.section6').slick({
             slidesToShow: 1,
             slidesToScroll: 1,
             autoplay: true,
