--- a/AspnetIdentityRoleBasedTutorial/Views/Product/ProductDetails.cshtml
+++ b/AspnetIdentityRoleBasedTutorial/Views/Product/ProductDetails.cshtml
@@ -39,7 +39,8 @@
                             <button class="quantity-button plus" onclick="incrementQuantity(this)">+</button>
                         </div>
                         <div class="button-container">
-                            <button type="button" class="btn btn-info" onclick="BuyNow('@Url.Action("GetAddressId", "Address",new {userId=product.CreatedBy,Id=product.ProductId})')">Buy</button>
+                            @* <button type="button" class="btn btn-info" onclick="('@Url.Action("GetAddressId", "Address",new {CreatedBy=product.CreatedBy,ProductId=product.ProductId})')">Buy</button>*@
+                            <button type="button" class="btn btn-info" onclick="redirectToAddress(@product.CreatedBy,@product.ProductId)">Buy</button>
                             <button type="button" class="btn btn-dark" onclick="addToCart('@Url.Action("InsertToCart", "Product",new {Id=product.ProductId,quantity = "TO_Num"})',this)">Add to Cart</button>
                         </div>
                     </div>
@@ -141,6 +142,10 @@
 
 
 <script>
+
+    function redirectToAddress() {
+        window.location.href = '@Url.Action("GetAddressId", "Address")';
+    }
     $(document).ready(function () {
         $('.section4').slick({
             slidesToShow: 1,
@@ -224,6 +229,7 @@
             }
         })
     }
+
 
   
         BuyNow = (url) => {
