--- a/AspnetIdentityRoleBasedTutorial/Views/Shared/_Layout.cshtml
+++ b/AspnetIdentityRoleBasedTutorial/Views/Shared/_Layout.cshtml
@@ -71,7 +71,7 @@
 
     <div class="online-shopping-company" style="margin-top:5%">
         <div class="category">
-            <a asp-area="" asp-controller="Home" asp-action="Index">
+            <a asp-area="" asp-controller="Product" asp-action="groceries">
                 <div class="category-icon">
                     <img loading="lazy" class="icon" alt="Grocery" src="https://rukminim1.flixcart.com/flap/128/128/image/29327f40e9c4d26b.png?q=100">
                 </div>
@@ -87,7 +87,7 @@
             </a>
         </div>
         <div class="category">
-            <a asp-area="" asp-controller="Home" asp-action="Index">
+            <a asp-area="" asp-controller="Product" asp-action="fashion">
                 <div class="category-icon">
                     <img loading="lazy" class="icon" alt="Fashion" src="https://rukminim1.flixcart.com/fk-p-flap/128/128/image/0d75b34f7d8fbcb3.png?q=100">
                 </div>
