--- a/AspnetIdentityRoleBasedTutorial/Views/Shared/_Layout.cshtml
+++ b/AspnetIdentityRoleBasedTutorial/Views/Shared/_Layout.cshtml
@@ -14,28 +14,7 @@
 
 </head>
 
-<script>
-    $(document).ready(function () {
-        // Activate Carousel
-        $("#myCarousel").carousel();
 
-        // Enable Carousel Indicators
-        $(".carousel-indicators li").click(function () {
-            $(".carousel-indicators li").removeClass("active");
-            $(this).addClass("active");
-        });
-
-        // Enable Carousel Controls
-        $(".carousel-control-prev").click(function () {
-            $("#myCarousel").carousel("prev");
-        });
-
-        $(".carousel-control-next").click(function () {
-            $("#myCarousel").carousel("next");
-        });
-    });
-
-</script>
 
 <body>
 
@@ -43,7 +22,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light" style="background-color: darkviolet;">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Product" asp-action="ProductDetails"><h3>DB Cart</h3></a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><h3>DB Cart</h3></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -53,7 +32,7 @@
                         @if (User.Identity.IsAuthenticated)
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-white" asp-area="" asp-controller="Product" asp-action="GetAll"><h5>Products</h5></a>
+                                <a class="nav-link text-white" asp-area="" asp-controller="Product" asp-action="ProductDetails"><h5>Products</h5></a>
                             </li>
                         }
                         @if (User.IsInRole("Admin"))
@@ -69,114 +48,7 @@
         </nav>
     </header>
 
-    <div class="online-shopping-company" style="margin-top:5%">
-        <div class="category">
-            <a asp-area="" asp-controller="Home" asp-action="Index">
-                <div class="category-icon">
-                    <img loading="lazy" class="icon" alt="Grocery" src="https://rukminim1.flixcart.com/flap/128/128/image/29327f40e9c4d26b.png?q=100">
-                </div>
-                <div class="category-title">Grocery</div>
-            </a>
-        </div>
-        <div class="category">
-            <a asp-area="" asp-controller="Home" asp-action="Index">
-                <div class="category-icon">
-                    <img loading="lazy" class="icon" alt="Mobiles" src="https://rukminim1.flixcart.com/flap/128/128/image/22fddf3c7da4c4f4.png?q=100">
-                </div>
-                <div class="category-title">Mobiles</div>
-            </a>
-        </div>
-        <div class="category">
-            <a asp-area="" asp-controller="Home" asp-action="Index">
-                <div class="category-icon">
-                    <img loading="lazy" class="icon" alt="Fashion" src="https://rukminim1.flixcart.com/fk-p-flap/128/128/image/0d75b34f7d8fbcb3.png?q=100">
-                </div>
-                <div class="category-title">Fashion</div>
-            </a>
-        </div>
-
-        <div class="category">
-            <a asp-area="" asp-controller="Home" asp-action="Index">
-                <div class="category-icon">
-                    <img loading="lazy" class="icon" alt="Electronics" src="https://rukminim1.flixcart.com/flap/128/128/image/69c6589653afdb9a.png?q=100">
-                </div>
-                <div class="category-title">Electronics</div>
-            </a>
-        </div>
-
-        <div class="category">
-            <a asp-area="" asp-controller="Home" asp-action="Index">
-                <div class="category-icon">
-                    <img loading="lazy" class="icon" alt="Home" src="https://rukminim1.flixcart.com/flap/128/128/image/ab7e2b022a4587dd.jpg?q=100">
-                </div>
-                <div class="category-title">Home</div>
-            </a>
-        </div>
-
-        <div class="category">
-            <a asp-area="" asp-controller="Home" asp-action="Index">
-                <div class="category-icon">
-                    <img loading="lazy" class="icon" alt="Appliances" src="https://rukminim1.flixcart.com/flap/128/128/image/0ff199d1bd27eb98.png?q=100">
-                </div>
-                <div class="category-title">Appliances</div>
-            </a>
-        </div>
-
-        <div class="category">
-            <a asp-area="" asp-controller="Home" asp-action="Index">
-                <div class="category-icon">
-                    <img loading="lazy" class="icon" alt="Travel" src="https://rukminim1.flixcart.com/flap/128/128/image/71050627a56b4693.png?q=100">
-                </div>
-                <div class="category-title">Travel</div>
-            </a>
-        </div>
-
-        <div class="category">
-            <a asp-area="" asp-controller="Home" asp-action="Index">
-                <div class="category-icon">
-                    <img loading="lazy" class="icon" alt="Top Offers" src="https://rukminim1.flixcart.com/flap/128/128/image/f15c02bfeb02d15d.png?q=100">
-                </div>
-                <div class="category-title">Top Offers</div>
-            </a>
-        </div>
-        <div class="category">
-            <a asp-area="" asp-controller="Home" asp-action="Index">
-                <div class="category-icon">
-                    <img loading="lazy" class="icon" alt="Beauty, Toys &amp; More" src="https://rukminim1.flixcart.com/flap/128/128/image/dff3f7adcf3a90c6.png?q=100">
-                </div>
-                <div class="category-title">Beauty, Toys</div>
-            </a>
-        </div>
-    </div>
-
-
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-        <!-- Indicators -->
-        <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="1"></li>
-        </ol>
-
-        <!-- Slides -->
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img class="d-block w-100" src="https://rukminim1.flixcart.com/fk-p-flap/844/140/image/1c58e8663a2af9d9.jpg?q=50" alt="w">
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-100" src="https://rukminim1.flixcart.com/fk-p-flap/1688/280/image/645cf9502f202096.jpg?q=50" alt="w">
-            </div>
-        </div>
-
-        <!-- Controls -->
-        <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
-    </div>
+    
 
 
 
@@ -208,12 +80,14 @@
 </html>
 
 <style>
-    a{
+    a {
         color: #000000;
     }
-    .text-muted{
+
+    .text-muted {
         color: #ffffff;
     }
+
     body {
         margin: 0;
         overflow-x: hidden;
@@ -223,25 +97,5 @@
     .navbar-light .navbar-brand {
         color: #e9ecef;
     }
-
-    .online-shopping-company {
-        display: flex;
-        flex-direction: row;
-        justify-content: flex-start;
-        align-items: baseline;
-    }
-
-    .category {
-        margin-right: 20px;
-    }
-
-    .category-icon img {
-        width: 128px;
-        height: 128px;
-    }
-
-    .category-title {
-        margin-top: 10px;
-        text-align: center;
     }
 </style>
