--- a/AspnetIdentityRoleBasedTutorial/Views/Cart/CartList.cshtml
+++ b/AspnetIdentityRoleBasedTutorial/Views/Cart/CartList.cshtml
@@ -1,11 +1,16 @@
 ﻿@model OnlineShoppingProject.ViewModels.ProductModels.AddProductCartVM
+
+
 @{
     int i = 0;
     decimal totalAmount = 0;
 }
-<div class="col-12" style="  margin-bottom: 15%;">
-    <div class="card">
-        <div class="card-body p-0">
+
+<div class="col-12">
+   <div class="col-12" style="margin-top:8%;">
+               <div class="card card-registration card-registration-2" >
+                    <div class="card-body p-0">
+                        <div class="row g-0">
             <div class="col-lg-8">
 
                 <div class="d-flex justify-content-between align-items-center mb-5">
@@ -25,9 +30,10 @@
                                 <img src="~/Img/@product.Product.Image" class="img-fluid rounded-3" width="112" height="112" alt="Cotton T-shirt">
                             </div>
                             <div class="col-md-3 col-lg-3 col-xl-3">
-                                @*<h6 class="text-muted">shirt</h6>*@
                                 <h4 class="text-black mb-0">@product.Description</h4>
                             </div>
+
+                         
                             <div class="col-md-3 col-lg-3 col-xl-2 d-flex">
                                 <button class="btn btn-link px-2 btn-lg"
                                         onclick="this.parentNode.querySelector('input[type=number]').stepDown()">
@@ -86,7 +92,7 @@
                         <h5>Free</h5>
                     </div>
                 </div>
-           
+               
 
                 <hr class="my-4">
 
@@ -101,9 +107,16 @@
                 </button>
 
             </div>
-
+            </div>
         </div>
     </div>
 </div>
+
+
+
+
+
+
+
 
 
