--- a/AspnetIdentityRoleBasedTutorial/Views/Home/Index.cshtml
+++ b/AspnetIdentityRoleBasedTutorial/Views/Home/Index.cshtml
@@ -2,7 +2,178 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>@ViewData["Title"] - DBCart</title>
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/AspnetIdentityRoleBasedTutorial.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
+</head>
+@*<div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+</div>*@
+<div class="online-shopping-company" style="margin-top:5%">
+    <div class="category">
+        <a asp-area="" asp-controller="Home" asp-action="Index">
+            <div class="category-icon">
+                <img loading="lazy" class="icon" alt="Grocery" src="https://rukminim1.flixcart.com/flap/128/128/image/29327f40e9c4d26b.png?q=100">
+            </div>
+            <div class="category-title">Grocery</div>
+        </a>
+    </div>
+    <div class="category">
+        <a asp-area="" asp-controller="Home" asp-action="Index">
+            <div class="category-icon">
+                <img loading="lazy" class="icon" alt="Mobiles" src="https://rukminim1.flixcart.com/flap/128/128/image/22fddf3c7da4c4f4.png?q=100">
+            </div>
+            <div class="category-title">Mobiles</div>
+        </a>
+    </div>
+    <div class="category">
+        <a asp-area="" asp-controller="Home" asp-action="Index">
+            <div class="category-icon">
+                <img loading="lazy" class="icon" alt="Fashion" src="https://rukminim1.flixcart.com/fk-p-flap/128/128/image/0d75b34f7d8fbcb3.png?q=100">
+            </div>
+            <div class="category-title">Fashion</div>
+        </a>
+    </div>
+
+    <div class="category">
+        <a asp-area="" asp-controller="Home" asp-action="Index">
+            <div class="category-icon">
+                <img loading="lazy" class="icon" alt="Electronics" src="https://rukminim1.flixcart.com/flap/128/128/image/69c6589653afdb9a.png?q=100">
+            </div>
+            <div class="category-title">Electronics</div>
+        </a>
+    </div>
+
+    <div class="category">
+        <a asp-area="" asp-controller="Home" asp-action="Index">
+            <div class="category-icon">
+                <img loading="lazy" class="icon" alt="Home" src="https://rukminim1.flixcart.com/flap/128/128/image/ab7e2b022a4587dd.jpg?q=100">
+            </div>
+            <div class="category-title">Home</div>
+        </a>
+    </div>
+
+    <div class="category">
+        <a asp-area="" asp-controller="Home" asp-action="Index">
+            <div class="category-icon">
+                <img loading="lazy" class="icon" alt="Appliances" src="https://rukminim1.flixcart.com/flap/128/128/image/0ff199d1bd27eb98.png?q=100">
+            </div>
+            <div class="category-title">Appliances</div>
+        </a>
+    </div>
+
+    <div class="category">
+        <a asp-area="" asp-controller="Home" asp-action="Index">
+            <div class="category-icon">
+                <img loading="lazy" class="icon" alt="Travel" src="https://rukminim1.flixcart.com/flap/128/128/image/71050627a56b4693.png?q=100">
+            </div>
+            <div class="category-title">Travel</div>
+        </a>
+    </div>
+
+    <div class="category">
+        <a asp-area="" asp-controller="Home" asp-action="Index">
+            <div class="category-icon">
+                <img loading="lazy" class="icon" alt="Top Offers" src="https://rukminim1.flixcart.com/flap/128/128/image/f15c02bfeb02d15d.png?q=100">
+            </div>
+            <div class="category-title">Top Offers</div>
+        </a>
+    </div>
+    <div class="category">
+        <a asp-area="" asp-controller="Home" asp-action="Index">
+            <div class="category-icon">
+                <img loading="lazy" class="icon" alt="Beauty, Toys &amp; More" src="https://rukminim1.flixcart.com/flap/128/128/image/dff3f7adcf3a90c6.png?q=100">
+            </div>
+            <div class="category-title">Beauty, Toys</div>
+        </a>
+    </div>
 </div>
+
+
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+    </ol>
+
+    <!-- Slides -->
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img class="d-block w-100" src="https://rukminim1.flixcart.com/fk-p-flap/844/140/image/1c58e8663a2af9d9.jpg?q=50" alt="w">
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="https://rukminim1.flixcart.com/fk-p-flap/1688/280/image/645cf9502f202096.jpg?q=50" alt="w">
+        </div>
+    </div>
+
+    <!-- Controls -->
+    <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
+</div>
+
+
+<style>
+    a {
+        color: #000000;
+    }
+
+  
+    .online-shopping-company {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        align-items: baseline;
+    }
+
+    .category {
+        margin-right: 20px;
+    }
+
+    .category-icon img {
+        width: 128px;
+        height: 128px;
+    }
+
+    .category-title {
+        margin-top: 10px;
+        text-align: center;
+    }
+</style>
+
+<script>
+    $(document).ready(function () {
+        // Activate Carousel
+        $("#myCarousel").carousel();
+
+        // Enable Carousel Indicators
+        $(".carousel-indicators li").click(function () {
+            $(".carousel-indicators li").removeClass("active");
+            $(this).addClass("active");
+        });
+
+        // Enable Carousel Controls
+        $(".carousel-control-prev").click(function () {
+            $("#myCarousel").carousel("prev");
+        });
+
+        $(".carousel-control-next").click(function () {
+            $("#myCarousel").carousel("next");
+        });
+    });
+
+</script>
